# Learn_Neo

./: .gitignore  ReadMe.md
Lab1/: CMakeLists.txt  Makefile  main.c
Lab2/: CMakeLists.txt
Lab2/inc/: neon.h
Lab2/src/: main.c  neon.c
Lab3/: CMakeLists.txt
Lab3/inc/: neon.h
Lab3/src/: main.c  neon.c
